Resolve with the class used to define the Custom Element https://bugs.webkit.org/show_bug.cgi?id=215562

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Re-sync'ed the test with that in https://github.com/web-platform-tests/wpt/pull/25033.

* web-platform-tests/custom-elements/CustomElementRegistry-expected.txt:
* web-platform-tests/custom-elements/CustomElementRegistry.html:

Source/WebCore:

Implemented the new behavior to resolve customElements.whenDefined(~)
with the custom element's constructor when it's defined.

Test: imported/w3c/web-platform-tests/custom-elements/CustomElementRegistry.html

* bindings/js/JSCustomElementRegistryCustom.cpp:
(WebCore::JSCustomElementRegistry::define):
(WebCore::whenDefinedPromise):
* bindings/js/JSDOMPromiseDeferred.h:
(WebCore::DeferredPromise::resolveWithJSValue): Added.
* dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::addElementDefinition): Made this return DeferredPromise.
* dom/CustomElementRegistry.h:


Canonical link: https://commits.webkit.org/228614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266142 268f45cc-cd09-0410-ab3c-d52691b4dbfc